# 06-db-homework

./: README.md
01-bd/: er_diagrama.drawio
02-postgree-sql/: er_diagrama.drawio  music.sql
02-postgree-sql/03-data-sampling/: music.sql
03-data-sampling/: 02_select.sql  03_select.sql  music.sql
04-postgreesql/: CMakeLists.txt
04-postgreesql/_dev/: sql.sql
04-postgreesql/src/: database.cpp  database.h  main.cpp
